--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,9 @@
     --chart-5: 340 75% 55%;
     --radius: 0.5rem;
 
-    font-family: "Inter", system-ui, sans-serif;
+    font-family: "dico-mono", mono;
+    font-weight: 400;
+    font-style: normal;
   }
 
   * {
